--- a/BlocksettleNetworkingLib/CMakeLists.txt
+++ b/BlocksettleNetworkingLib/CMakeLists.txt
@@ -22,7 +22,10 @@ FILE(GLOB SOURCES
    Message/*.cpp
 )
 
-IF (DISABLE_CELER)
+IF (NOT DISABLE_CELER)
+   FILE(GLOB CELER_SOURCES Celer/*.cpp)
+   LIST(APPEND SOURCES ${CELER_SOURCES})
+ELSE ()
    list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/AssetManager.cpp)
    list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/AuthAddressManager.cpp)
    list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/BaseCelerClient.cpp)
@@ -30,31 +33,11 @@ IF (DISABLE_CELER)
    list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/BSMarketDataProvider.cpp)
    list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CCFileManager.cpp)
    list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CCPubConnection.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerCancelOrderSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerCancelQuoteNotifSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerCancelRFQSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerClient.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerClientProxy.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerCreateFxOrderSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerCreateOrderSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerFindSubledgersForAccountSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerGetAssignedAccountsListSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerGetUserIdSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerGetUserPropertySequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerLoadMDDefinitionsSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerLoadUserInfoSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerLoginSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerMessageMapper.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerPropertiesDefinitions.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerSetUserPropertySequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerSignTxSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerSubmitQuoteNotifSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CelerSubmitRFQSequence.cpp)
-   list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/CommonTypes.cpp)
    list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/MarketDataProvider.cpp)
    list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/QuoteProvider.cpp)
    list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/SingleCelerConnectionListener.cpp)
-ENDIF()
+ENDIF (DISABLE_CELER)
+
 
 FILE(GLOB HEADERS
    *.h
@@ -69,7 +52,10 @@ FILE(GLOB HEADERS
    Message/*.h
 )
 
-IF (DISABLE_CELER)
+IF (NOT DISABLE_CELER)
+   FILE(GLOB CELER_HEADERS Celer/*.h)
+   LIST(APPEND HEADERS ${CELER_HEADERS})
+ELSE ()
    list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/AssetManager.h)
    list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/AuthAddressManager.h)
    list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/BaseCelerClient.h)
@@ -77,31 +63,11 @@ IF (DISABLE_CELER)
    list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/BSMarketDataProvider.h)
    list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CCFileManager.h)
    list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CCPubConnection.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerCancelOrderSequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerCancelQuoteNotifSequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerCancelRFQSequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerClient.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerClientProxy.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerCreateFxOrderSequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerCreateOrderSequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerFindSubledgersForAccountSequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerGetAssignedAccountsListSequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerGetUserIdSequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerGetUserPropertySequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerLoadMDDefinitionsSequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerLoadUserInfoSequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerLoginSequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerMessageMapper.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerPropertiesDefinitions.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerSetUserPropertySequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerSignTxSequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerSubmitQuoteNotifSequence.h)
-   list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CelerSubmitRFQSequence.h)
    list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/CommonTypes.h)
    list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/MarketDataProvider.h)
    list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/QuoteProvider.h)
    list(REMOVE_ITEM HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/SingleCelerConnectionListener.h)
-ENDIF()
+ENDIF (DISABLE_CELER)
 
 
 # for bdmenums.h include in ApplicationSettings.h ( ugly :( )
