--- a/BlocksettleNetworkingLib/CMakeLists.txt
+++ b/BlocksettleNetworkingLib/CMakeLists.txt
@@ -10,6 +10,7 @@
 #
 # CMake 3.10 fixes automoc Q_NAMESPACE detection
 CMAKE_MINIMUM_REQUIRED( VERSION 3.10 )
+SET(CMAKE_CXX_STANDARD 17)
 
 PROJECT( ${BS_NETWORK_LIB_NAME} )
 
