small build fixes

--- a/cppForSwig/CMakeLists.txt
+++ b/cppForSwig/CMakeLists.txt
@@ -24,7 +24,7 @@ SET (SOURCES
    ${CPP_FOR_SWIG_ROOT}/AuthorizedPeers.cpp
    ${CPP_FOR_SWIG_ROOT}/BinaryData.cpp
    ${CPP_FOR_SWIG_ROOT}/BIP150_151.cpp
-   ${CPP_FOR_SWIG_ROOT}/BIP15x_Handshake.cpp   
+   ${CPP_FOR_SWIG_ROOT}/BIP15x_Handshake.cpp
    ${CPP_FOR_SWIG_ROOT}/BIP32_Node.cpp
    ${CPP_FOR_SWIG_ROOT}/BlockDataManagerConfig.cpp
    ${CPP_FOR_SWIG_ROOT}/BtcUtils.cpp
@@ -244,7 +244,7 @@ ENDIF (BUILD_TEST_TOOLS)
 
 TARGET_LINK_LIBRARIES(${CRYPTO_LIB_NAME}
    ${WS_LIB}
-   ${CRYPTOPP_LIB}
+   ${LIBBTC_LIB}
    )
 
 IF(NOT WIN32)
