--- a/BlocksettleNetworkingLib/CMakeLists.txt
+++ b/BlocksettleNetworkingLib/CMakeLists.txt
@@ -51,6 +51,9 @@ INCLUDE_DIRECTORIES( ${COMMON_LIB_INCLUDE_DIR} )
 
 INCLUDE_DIRECTORIES( ${BOTAN_INCLUDE_DIR} )
 
+INCLUDE_DIRECTORIES(${JANSSON_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${CJOSE_INCLUDE_DIR})
+
 LIST (APPEND SOURCES ${AUTHEID_UTILS})
 
 ADD_LIBRARY( ${BS_NETWORK_LIB_NAME} ${SOURCES} ${HEADERS})
